<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">
        <CheckBox
            android:id="@+id/chk_arms"
            android:onClick="itemClicked"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chk_arms"/>
        <CheckBox
            android:id="@+id/chk_ears"
            android:onClick="itemClicked"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chk_ears"/>
        <CheckBox
            android:id="@+id/chk_eyebrows"
            android:onClick="itemClicked"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chk_eyebrows"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <CheckBox
            android:id="@+id/chk_eyes"
            android:onClick="itemClicked"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chk_eyes"
            android:checked="true"
            android:clickable="false" />
        <CheckBox
            android:id="@+id/chk_mouth"
            android:onClick="itemClicked"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chk_mouth" />
        <CheckBox
            android:id="@+id/chk_nose"
            android:onClick="itemClicked"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chk_nose"/>
    </LinearLayout>
</LinearLayout>
