<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_margin="16dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">
        <CheckBox
            android:id="@+id/chk_glasses"
            android:onClick="itemClicked"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chk_glasses"/>
        <CheckBox
            android:id="@+id/chk_hat"
            android:onClick="itemClicked"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chk_hat"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">
        <CheckBox
            android:id="@+id/chk_mustache"
            android:onClick="itemClicked"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chk_mustache"
            android:background="@color/dim_foreground_disabled_material_light"
            android:checked="false" />

        <CheckBox
            android:id="@+id/chk_shoes"
            android:onClick="itemClicked"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chk_shoes"/>
    </LinearLayout>
</LinearLayout>
